List and Cache Play Records (#101)
* Grant read andwrite to listPlayRecords, and listPlayRecordsByDate to allow cache creation
* Add nested caching across list playrecords
* Create JsonSchema for PlayRecord and PlayRecords
* Ensure all 12 months in previous years are considered when indexing
* Regenerate the api-client.d.ts types
* Expect to always update cache when getting play records from endpoints
* Documented backup and restore using sync commands and bucket names
